cluster/apps/networking/traefik/ingressRoute - metrics.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: networking
spec:
  entryPoints:
    - metrics
  routes:
    - match: Host(`traefik.${SECRET_DOMAIN}`) # && PathPrefix(`/metrics`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: rfc1918
        # - name: basicauth
      services:
        - name: prometheus@internal
          kind: TraefikService
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
